Fixed z-index bug

--- a/src/sass/scroll-to-top.scss
+++ b/src/sass/scroll-to-top.scss
@@ -5,7 +5,7 @@
 	bottom: 0;
 	right: 0;
 	left: 0;
-	z-index: index($layers, above-overlay);
+	z-index: index($layers, scroll-to-top);
 	display: flex;
 	justify-content: center;
 
