--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -125,7 +125,7 @@ $transition-duration-card-image-hover-fast: $transition-duration-card-image-hove
 // MISCELLANEOUS VARIABLES
 $border-radius-button: #{$lhse} / #{$lhse * 2};
 $border-radius-group: $lhse*.3820;
-$layers: card-li-focus-within, card-li-hover, card-overlay, app-header, update-notif, bg-overlay, above-overlay, app-menu-toggler;
+$layers: card-li-focus-within, card-li-hover, scroll-to-top, card-overlay, app-header, update-notif, bg-overlay, above-overlay, app-menu-toggler;
 $opacity-mana-symbols: .9167;
 $gradient-background-sideboard: repeating-linear-gradient(-45deg,
 	$color-mythic-very-dim 											0,
